--- a/index.html
+++ b/index.html
@@ -1,45 +1,260 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>todo</title>
-    <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nanum+Myeongjo:wght@700&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/styles.css">
-  </head>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+  <title>해와달</title>
+  <meta name="title" content="모바일장례식 해와달" />
+  <meta name="Keywords"
+    content="해와달,모바일장례식 해와달,부고알림,조의금전송,모바일장례식,모바일장례식장,모바일부고장,모바일조문,부고장,사이버부고장,사이버장례식,사이버장례식장,사이버조문,사이버장례식 해와달">
+  <meta name="description" content="모바일 장례서비스 해와달,쉽고 빠르게 부고장 전달,이제는 조문도 모바일 시대,모바일 장례식장,해와달">
+  <meta property="og:title" content="모바일장례식 해와달">
+  <meta property="og:image" content="">
+  <meta property="og:url" content="https://sunatmoon.com/" />
+  <meta property="og:site_name" content="모바일장례식 해와달" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:title" content="모바일 장례식장 해와달">
+  <meta name="twitter:description" content="모바일 장례서비스 해와달, 쉽고 빠르게 부고장 전달 , 이제는 조문도 모바일 시대 , 모바일 장례식장 , 해와달">
+  <meta name="twitter:image" content="">
+  <meta name="twitter:card" content="summary_large_image">
 
-  <body>
-    <div class="js-bg bg-box"></div>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/fonts.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="./js/layout.js"></script>
 
-    <div class="container">
-      
-      <form class="js-form form">
-        <input type="text" placeholder="What is your name?" />
-      </form>
-
-      <div class="intro-box">
-        <div class="js-clock clock">
-          <h1>00:00</h1>
+  <script src="./js/jquery.fullPage.js"></script>
+  <script src="./js/scrolloverflow.min.js"></script>
+  <script src="./js/slick.js"></script>
+  <script src="./js/main.js"></script>
+  <link rel="stylesheet" href="./css/fullpage.css">
+  <link rel="stylesheet" href="./css/slick.css">
+  <link rel="stylesheet" href="./css/main.css">
+</head>
+<body>
+  <!-- class=fp-back : 전체화면 배경일 경우 -->
+  <div class="fp-back wrap">
+    <header class="header">
+      <nav class="hd-navbar">
+        <h1 class="hd-logo"><a href="./index.html">해와달</a></h1>
+        <div class="hd-gnb">
+          <ul class="hd-menu">
+            <li><a href="">신청하기</a></li>
+            <li><a href="">고객센터</a></li>
+            <li><a href="">마이페이지</a></li>
+          </ul>
+          <ul class="hd-util">
+            <li class="hd-login">
+              <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
+              <a href="./sub/user_login.html">로그인</a>
+            </li>
+            <li class="hd-signup"><a href="">회원가입</a></li>
+            <!-- <li class="hd-login">
+              <p class="mobile">홍길동님 반갑습니다!</p>
+              <a href="">로그아웃</a>
+            </li> -->
+          </ul>
+          <div class="mobile footer">
+            <ul class="list-info">
+              <li><a href="">고객문의</a></li>
+              <li><a href="">이용약관</a></li>
+              <li><a href="">개인정보처리방침</a></li>
+            </ul>
+            <button class="btn-top">TOP</button>
+            <p class="ft-logo"><img src="./images/common/ft-logo.png" alt="해와달 로고" /></p>
+            <address class="address-info">
+              <span>㈜에이튜드</span>
+              <span>대표 임재범</span>
+              <span>사업자등록번호 731-86-00258</span>
+              <span>고객센터 02-586-2589</span>
+              <span>서울시 서초구 사임당로 17길 99, 하이센스빌딩 4층</span>
+            </address>
+            <small class="txt-copyright">COPYRIGHT(C) 2020 SUN AND MOON. ALL RIGHTS RESERVED</small>
+          </div>
         </div>
-        <p class="js-greetings greetings"></p>
-
-        <div class="js-weather weather"></div>
-        <button type="button" class="btn-todo">list</button>
+      </nav>
+      <button class="mobile btn-m-toggle">
+        <span class="bar"></span>
+      </button>
+    </header>
+    <div class="fullpage-wrap">
+      <section class="fp-section intro">
+        <div class="con-wrap">
+          <div class="sec-copy">
+            <em>직접 조문이 어려울 때</em>
+            <h2>모바일 장례식장 <strong>해와달</strong></h2>
+            <p>직접 조문이 어려울 때 직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때</p>
+          </div>
+        </div>
+      </section>
+      <section class="fp-section service">
+        <div class="con-wrap">
+          <div class="sec-copy">
+            <h2>모바일 장례식장</h2>
+            <p>
+              부득이 조문을 못오시는 조문객들이나 조의금 등을<br />
+              직접 전달이 여의치 않은 분들을 위해 정중하게 장례정보를 전달하고<br />
+              또한 부고를 알리는데 보다 편리하고 간편하게 제작된<br />
+              <em><strong>모바일 장례 플랫폼</strong> 입니다.</em>
+            </p>
+          </div>
+          <div class="service-list">
+            <div class="slick-wrapper">
+              <div class="slide-cut">
+                <div class="slide-box">
+                  <img src="./images/main/service-img-1.png" alt="" />
+                  <img src="./images/main/service-txt-1.png" alt="추모앨범으로 고인을 추억" />
+                </div>
+              </div>
+              <div class="slide-cut">
+                <div class="slide-box">
+                  <img src="./images/main/service-img-2.png" alt="" />
+                  <img src="./images/main/service-txt-2.png" alt="방명록으로 메세지 전달" />
+                </div>
+              </div>
+              <div class="slide-cut">
+                <div class="slide-box">
+                  <img src="./images/main/service-img-3.png" alt="" />
+                  <img src="./images/main/service-txt-3.png" alt="모바일로 조의금 송금" />
+                </div>
+              </div>
+            </div>
+            <div class="slick-pagination">
+              <p class="page-num"><strong>01</strong> <span>/</span> <em>03</em></p>
+              <div class="btn-move">
+                <button class="prev" type="button">prev</button>
+                <button class="next" type="button">next</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="fp-section use-step">
+        <div class="con-wrap">
+          <div class="sec-copy">
+            <h2><em>모바일 장례식장 해와달</em> <strong>이렇게 이용하세요!</strong></h2>
+          </div>
+          <div class="step">
+            <ol>
+              <li>
+                <img class="web" src="./images/main/use-step-1.png" alt="해와달 접속">
+                <img class="mobile" src="./images/main/sec03_obj01_m.png" alt="해와달 접속">
+              </li>
+              <li>
+                <img class="web" src="./images/main/use-step-2.png" alt="로그인">
+                <img class="mobile" src="./images/main/sec03_obj02_m.png" alt="로그인">
+              </li>
+              <li>
+                <img class="web" src="./images/main/use-step-3.png" alt="상품선택 및 결제">
+                <img class="mobile" src="./images/main/sec03_obj03_m.png" alt="상품선택 및 결제">
+              </li>
+              <li>
+                <img class="web" src="./images/main/use-step-4.png" alt="정보입력">
+                <img class="mobile" src="./images/main/sec03_obj04_m.png" alt="정보입력">
+              </li>
+            </ol>
+            <p>제공된 URL로 지인들에게 카톡/문자 전송</p>
+          </div>
+        </div>
+      </section>
+      <section class="fp-section screen-guide">
+        <div class="con-wrap">
+          <div class="sec-copy">
+            <h2><em>모바일 장례식장</em> <strong>조문객 이용가이드</strong></h2>
+          </div>
+        </div>
+        <div class="guide-list">
+          <img src="./images/main/bg-screen-slide.png" alt="" class="bg" />
+          <div class="slick-wrapper">
+            <div class="slide-cut  slick-current-on">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-1.png" alt="" />
+                <p>모바일로 부고를 알리고 <br>상세 장례 정보를 제공합니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-2.png" alt="" />
+                <p>모바일 장례식 메인 메뉴가 표시되며, <br>고인명, 입관, 발인일실, 상주정보를 보실 수 있습니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-3.png" alt="" />
+                <p>추모앨범을 직접 등록하고 <br>관리할 수 있습니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-4.png" alt="" />
+                <p>신청 시 등록한 장례정보가 <br>상세하게 보여지며 등록된 전화번호로 <br>바로 전화연결이 가능합니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-5.png" alt="" />
+                <p>방명록을 등록할 수 있는 화면입니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-6.png" alt="" />
+                <p>등록된 방명록을 보실 수 있습니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-7.png" alt="" />
+                <p>조문예절을 확인하실 수 있습니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-8.png" alt="" />
+                <p>장례식장 정보를 <br>지도로 확인하실 수 있습니다.</p>
+              </div>
+            </div>
+            <div class="slide-cut">
+              <div class="slide-box">
+                <img src="./images/main/screen-guide-8.png" alt="" />
+                <p>고객님께서 작성하신 정보로 <br>조의금을 보내실 수 있습니다.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="fp-section fp-auto-height">
+        <footer class="footer">
+          <ul class="list-info">
+            <li><a href="">고객문의</a></li>
+            <li><a href="">이용약관</a></li>
+            <li><a href="">개인정보처리방침</a></li>
+          </ul>
+          <button class="btn-top">TOP</button>
+          <p class="ft-logo"><img src="./images/common/ft-logo.png" alt="해와달 로고" /></p>
+          <address class="address-info">
+            <span>㈜에이튜드</span>
+            <span>대표 임재범</span>
+            <span>사업자등록번호 731-86-00258</span>
+            <span>고객센터 02-586-2589</span> 
+            <span>서울시 서초구 사임당로 17길 99, 하이센스빌딩 4층</span>
+          </address>
+          <small class="txt-copyright">COPYRIGHT(C) 2020 SUN AND MOON. ALL RIGHTS RESERVED</small>
+        </footer>
       </div>
-      
     </div>
-
-    <div class="list-container">
-      <form class="js-toDoForm">
-        <input type="text" placeholder="Write a to do" />
-      </form>
-      <ul class="js-toDoList"></ul>
+    <a href="" class="shortcut">샘플<br />보러가기</a>
+  </div>
+  <div class="load-wrap intro">
+    <div class="con-wrap">
+      <div class="sec-copy">
+        <em>직접 조문이 어려울 때</em>
+        <h2>모바일 장례식장 <strong>해와달</strong></h2>
+        <p>직접 조문이 어려울 때 직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때직접 조문이 어려울 때</p>
+      </div>
     </div>
-
-    <script src="src/clock.js"></script>
-    <script src="src/gretting.js"></script>
-    <script src="src/todo.js"></script>
-    <script src="src/bg.js"></script>
-    <script src="src/weather.js"></script>
-  </body>
+  </div>
+</body>
 </html>
