--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
   <meta name="twitter:image" content="">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/fonts.css">
-  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/fonts.css">
+  <link rel="stylesheet" href="/css/layout.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="./js/layout.js"></script>
+  <script src="/js/layout.js"></script>
 
-  <script src="./js/jquery.fullPage.js"></script>
-  <script src="./js/scrolloverflow.min.js"></script>
-  <script src="./js/slick.js"></script>
-  <script src="./js/main.js"></script>
-  <link rel="stylesheet" href="./css/fullpage.css">
-  <link rel="stylesheet" href="./css/slick.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <script src="/js/jquery.fullPage.js"></script>
+  <script src="/js/scrolloverflow.min.js"></script>
+  <script src="/js/slick.js"></script>
+  <script src="/js/main.js"></script>
+  <link rel="stylesheet" href="/css/fullpage.css">
+  <link rel="stylesheet" href="/css/slick.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <!-- class=fp-back : 전체화면 배경일 경우 -->
   <div class="fp-back wrap">
     <header class="header">
       <nav class="hd-navbar">
-        <h1 class="hd-logo"><a href="./index.html">해와달</a></h1>
+        <h1 class="hd-logo"><a href="/index.html">해와달</a></h1>
         <div class="hd-gnb">
           <ul class="hd-menu">
             <li><a href="">신청하기</a></li>
@@ -48,9 +48,9 @@
           <ul class="hd-util">
             <li class="hd-login">
               <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
-              <a href="./sub/user_login.html">로그인</a>
+              <a href="/sub/user_login.html">로그인</a>
             </li>
-            <li class="hd-signup"><a href="">회원가입</a></li>
+            <li class="hd-signup"><a href="/sub/user_register.html">회원가입</a></li>
             <!-- <li class="hd-login">
               <p class="mobile">홍길동님 반갑습니다!</p>
               <a href="">로그아웃</a>
@@ -63,7 +63,7 @@
               <li><a href="">개인정보처리방침</a></li>
             </ul>
             <button class="btn-top">TOP</button>
-            <p class="ft-logo"><img src="./images/common/ft-logo.png" alt="해와달 로고" /></p>
+            <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
             <address class="address-info">
               <span>㈜에이튜드</span>
               <span>대표 임재범</span>
@@ -104,20 +104,20 @@
             <div class="slick-wrapper">
               <div class="slide-cut">
                 <div class="slide-box">
-                  <img src="./images/main/service-img-1.png" alt="" />
-                  <img src="./images/main/service-txt-1.png" alt="추모앨범으로 고인을 추억" />
+                  <img src="/images/main/service-img-1.png" alt="" />
+                  <img src="/images/main/service-txt-1.png" alt="추모앨범으로 고인을 추억" />
                 </div>
               </div>
               <div class="slide-cut">
                 <div class="slide-box">
-                  <img src="./images/main/service-img-2.png" alt="" />
-                  <img src="./images/main/service-txt-2.png" alt="방명록으로 메세지 전달" />
+                  <img src="/images/main/service-img-2.png" alt="" />
+                  <img src="/images/main/service-txt-2.png" alt="방명록으로 메세지 전달" />
                 </div>
               </div>
               <div class="slide-cut">
                 <div class="slide-box">
-                  <img src="./images/main/service-img-3.png" alt="" />
-                  <img src="./images/main/service-txt-3.png" alt="모바일로 조의금 송금" />
+                  <img src="/images/main/service-img-3.png" alt="" />
+                  <img src="/images/main/service-txt-3.png" alt="모바일로 조의금 송금" />
                 </div>
               </div>
             </div>
@@ -139,20 +139,20 @@
           <div class="step">
             <ol>
               <li>
-                <img class="web" src="./images/main/use-step-1.png" alt="해와달 접속">
-                <img class="mobile" src="./images/main/sec03_obj01_m.png" alt="해와달 접속">
+                <img class="web" src="/images/main/use-step-1.png" alt="해와달 접속">
+                <img class="mobile" src="/images/main/sec03_obj01_m.png" alt="해와달 접속">
               </li>
               <li>
-                <img class="web" src="./images/main/use-step-2.png" alt="로그인">
-                <img class="mobile" src="./images/main/sec03_obj02_m.png" alt="로그인">
+                <img class="web" src="/images/main/use-step-2.png" alt="로그인">
+                <img class="mobile" src="/images/main/sec03_obj02_m.png" alt="로그인">
               </li>
               <li>
-                <img class="web" src="./images/main/use-step-3.png" alt="상품선택 및 결제">
-                <img class="mobile" src="./images/main/sec03_obj03_m.png" alt="상품선택 및 결제">
+                <img class="web" src="/images/main/use-step-3.png" alt="상품선택 및 결제">
+                <img class="mobile" src="/images/main/sec03_obj03_m.png" alt="상품선택 및 결제">
               </li>
               <li>
-                <img class="web" src="./images/main/use-step-4.png" alt="정보입력">
-                <img class="mobile" src="./images/main/sec03_obj04_m.png" alt="정보입력">
+                <img class="web" src="/images/main/use-step-4.png" alt="정보입력">
+                <img class="mobile" src="/images/main/sec03_obj04_m.png" alt="정보입력">
               </li>
             </ol>
             <p>제공된 URL로 지인들에게 카톡/문자 전송</p>
@@ -166,59 +166,59 @@
           </div>
         </div>
         <div class="guide-list">
-          <img src="./images/main/bg-screen-slide.png" alt="" class="bg" />
+          <img src="/images/main/bg-screen-slide.png" alt="" class="bg" />
           <div class="slick-wrapper">
             <div class="slide-cut  slick-current-on">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-1.png" alt="" />
+                <img src="/images/main/screen-guide-1.png" alt="" />
                 <p>모바일로 부고를 알리고 <br>상세 장례 정보를 제공합니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-2.png" alt="" />
+                <img src="/images/main/screen-guide-2.png" alt="" />
                 <p>모바일 장례식 메인 메뉴가 표시되며, <br>고인명, 입관, 발인일실, 상주정보를 보실 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-3.png" alt="" />
+                <img src="/images/main/screen-guide-3.png" alt="" />
                 <p>추모앨범을 직접 등록하고 <br>관리할 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-4.png" alt="" />
+                <img src="/images/main/screen-guide-4.png" alt="" />
                 <p>신청 시 등록한 장례정보가 <br>상세하게 보여지며 등록된 전화번호로 <br>바로 전화연결이 가능합니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-5.png" alt="" />
+                <img src="/images/main/screen-guide-5.png" alt="" />
                 <p>방명록을 등록할 수 있는 화면입니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-6.png" alt="" />
+                <img src="/images/main/screen-guide-6.png" alt="" />
                 <p>등록된 방명록을 보실 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-7.png" alt="" />
+                <img src="/images/main/screen-guide-7.png" alt="" />
                 <p>조문예절을 확인하실 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-8.png" alt="" />
+                <img src="/images/main/screen-guide-8.png" alt="" />
                 <p>장례식장 정보를 <br>지도로 확인하실 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
-                <img src="./images/main/screen-guide-8.png" alt="" />
+                <img src="/images/main/screen-guide-8.png" alt="" />
                 <p>고객님께서 작성하신 정보로 <br>조의금을 보내실 수 있습니다.</p>
               </div>
             </div>
@@ -233,7 +233,7 @@
             <li><a href="">개인정보처리방침</a></li>
           </ul>
           <button class="btn-top">TOP</button>
-          <p class="ft-logo"><img src="./images/common/ft-logo.png" alt="해와달 로고" /></p>
+          <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
           <address class="address-info">
             <span>㈜에이튜드</span>
             <span>대표 임재범</span>
