--- a/sub/user_login.html
+++ b/sub/user_login.html
@@ -20,21 +20,21 @@
   <meta name="twitter:image" content="">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/fonts.css">
+  <link rel="stylesheet" href="/css/layout.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="../js/layout.js"></script>
+  <script src="/js/layout.js"></script>
 
-  <link rel="stylesheet" href="../css/sub.css">
+  <link rel="stylesheet" href="/css/sub.css">
 </head>
 
 <body>
   <div class="fp-back wrap login-wrap">
     <header class="header">
       <nav class="hd-navbar">
-        <h1 class="hd-logo"><a href="../index.html">해와달</a></h1>
+        <h1 class="hd-logo"><a href="/index.html">해와달</a></h1>
         <div class="hd-gnb">
           <ul class="hd-menu">
             <li><a href="">신청하기</a></li>
@@ -46,7 +46,7 @@
               <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
               <a href="/sub/user_login.html">로그인</a>
             </li>
-            <li class="hd-signup"><a href="">회원가입</a></li>
+            <li class="hd-signup"><a href="/sub/user_register.html">회원가입</a></li>
             <!-- <li class="hd-login">
               <p class="mobile">홍길동님 반갑습니다!</p>
               <a href="">로그아웃</a>
@@ -59,7 +59,7 @@
               <li><a href="">개인정보처리방침</a></li>
             </ul>
             <button class="btn-top">TOP</button>
-            <p class="ft-logo"><img src="../images/common/ft-logo.png" alt="해와달 로고" /></p>
+            <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
             <address class="address-info">
               <span>㈜에이튜드</span>
               <span>대표 임재범</span>
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="form-row sp-btw">
-              <a href="../sub/user_find.html">아이디/비밀번호 찾기</a>
+              <a href="/sub/user_find.html">아이디/비밀번호 찾기</a>
               <div class="input-wrap input-chk">
                 <input type="checkbox" id="keep" />
                 <label for="keep">아이디저장</label>
