--- a/sub/user_register.html
+++ b/sub/user_register.html
@@ -20,21 +20,21 @@
   <meta name="twitter:image" content="">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/fonts.css">
-  <link rel="stylesheet" href="../css/layout.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/fonts.css">
+  <link rel="stylesheet" href="/css/layout.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="../js/layout.js"></script>
+  <script src="/js/layout.js"></script>
 
-  <link rel="stylesheet" href="../css/sub.css">
+  <link rel="stylesheet" href="/css/sub.css">
 </head>
 
 <body>
   <div class="fp-back wrap login-wrap">
     <header class="header">
       <nav class="hd-navbar">
-        <h1 class="hd-logo"><a href="../index.html">해와달</a></h1>
+        <h1 class="hd-logo"><a href="/index.html">해와달</a></h1>
         <div class="hd-gnb">
           <ul class="hd-menu">
             <li><a href="">신청하기</a></li>
@@ -59,7 +59,7 @@
               <li><a href="">개인정보처리방침</a></li>
             </ul>
             <button class="btn-top">TOP</button>
-            <p class="ft-logo"><img src="../images/common/ft-logo.png" alt="해와달 로고" /></p>
+            <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
             <address class="address-info">
               <span>㈜에이튜드</span>
               <span>대표 임재범</span>
@@ -115,7 +115,7 @@
             <div class="form-row">
               <div class="input-wrap input-chk">
                 <input type="checkbox" id="agree" />
-                <label for="agree" onclick="popupLoad('terms')"> 이용약관 및 개인정보처리방침 동의</label>
+                <label for="agree" onclick="javascript:popupLoad('terms');"> 이용약관 및 개인정보처리방침 동의</label>
               </div>
             </div>
           </fieldset>
