--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <ul class="hd-util">
             <li class="hd-login">
               <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
-              <a href="/sub/user_login.html">로그인</a>
+              <a href="/Login/user_login.html">로그인</a>
             </li>
-            <li class="hd-signup"><a href="/sub/user_register.html">회원가입</a></li>
+            <li class="hd-signup"><a href="/Login/user_register.html">회원가입</a></li>
             <!-- <li class="hd-login">
               <p class="mobile">홍길동님 반갑습니다!</p>
               <a href="">로그아웃</a>
@@ -58,8 +58,8 @@
           <div class="mobile footer">
             <ul class="list-info">
               <li><a href="">고객문의</a></li>
-              <li><a href="">이용약관</a></li>
-              <li><a href="">개인정보처리방침</a></li>
+              <li><a href="javascript:popupLoad('terms');">이용약관</a></li>
+              <li><a href="javascript:popupLoad('terms');">개인정보처리방침</a></li>
             </ul>
             <button class="btn-top">TOP</button>
             <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
@@ -225,26 +225,26 @@
         </div>
       </section>
       <div class="fp-section fp-auto-height">
-        <footer class="footer">
-          <ul class="list-info">
-            <li><a href="">고객문의</a></li>
-            <li><a href="">이용약관</a></li>
-            <li><a href="">개인정보처리방침</a></li>
-          </ul>
-          <button class="btn-top">TOP</button>
-          <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
-          <address class="address-info">
-            <span>㈜에이튜드</span>
-            <span>대표 임재범</span>
-            <span>사업자등록번호 731-86-00258</span>
-            <span>고객센터 02-586-2589</span> 
-            <span>서울시 서초구 사임당로 17길 99, 하이센스빌딩 4층</span>
-          </address>
-          <small class="txt-copyright">COPYRIGHT(C) 2020 SUN AND MOON. ALL RIGHTS RESERVED</small>
-        </footer>
+      <footer  ter class="footer">
+        <ul class="list-info">
+          <li><a href="">고객문의</a></li>
+          <li><a href="javascript:popupLoad('terms');">이용약관</a></li>
+          <li><a href="javascript:popupLoad('terms');">개인정보처리방침</a></li>
+        </ul>
+        <button class="btn-top">TOP</button>
+        <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
+        <address class="address-info">
+          <span>㈜에이튜드</span>
+          <span>대표 임재범</span>
+          <span>사업자등록번호 731-86-00258</span>
+          <span>고객센터 02-586-2589</span>
+          <span>서울시 서초구 사임당로 17길 99, 하이센스빌딩 4층</span>
+        </address>
+        <small class="txt-copyright">COPYRIGHT(C) 2020 SUN AND MOON. ALL RIGHTS RESERVED</small>
+      </footer>
       </div>
     </div>
-    <a href="" class="shortcut">샘플<br />보러가기</a>
+    <a href="/Apply/apply_sample.html" class="shortcut">샘플<br />보러가기</a>
   </div>
   <div class="load-wrap intro">
     <div class="con-wrap">
