--- a/MyPage/list_empty.html
+++ b/MyPage/list_empty.html
@@ -27,36 +27,42 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/js/layout.js"></script>
 
+  <script src="/js/slick.js"></script>
+  <link rel="stylesheet" href="/css/slick.css">
   <link rel="stylesheet" href="/css/sub.css">
 </head>
 
 <body>
-  <div class="fp-back wrap login-wrap">
+  <div class="wrap sub-wrap">
     <header class="header">
       <nav class="hd-navbar">
         <h1 class="hd-logo"><a href="/index.html">해와달</a></h1>
         <div class="hd-gnb">
           <ul class="hd-menu">
-            <li><a href="">신청하기</a></li>
-            <li><a href="">고객센터</a></li>
-            <li><a href="">마이페이지</a></li>
+            <li><a href="/Apply/apply.html">신청하기</a></li>
+            <li><a href="/CSCcenter/csc.html">고객센터</a></li>
+            <li><a href="/MyPage/mypage.html">마이페이지</a></li>
           </ul>
           <ul class="hd-util">
+            <!-- login 전 -->
             <li class="hd-login">
               <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
-              <a href="">로그인</a>
+              <a href="/Login/user_login.html">로그인</a>
             </li>
-            <li class="hd-signup"><a href="">회원가입</a></li>
+            <li class="hd-signup"><a href="/Login/user_register.html">회원가입</a></li>
+            <!-- //login 전 -->
+            <!-- login 후 -->
             <!-- <li class="hd-login">
               <p class="mobile">홍길동님 반갑습니다!</p>
               <a href="">로그아웃</a>
             </li> -->
+            <!-- //login 후 -->
           </ul>
           <div class="mobile footer">
             <ul class="list-info">
               <li><a href="">고객문의</a></li>
-              <li><a href="">이용약관</a></li>
-              <li><a href="">개인정보처리방침</a></li>
+              <li><a href="javascript:popupLoad('terms');">이용약관</a></li>
+              <li><a href="javascript:popupLoad('terms');">개인정보처리방침</a></li>
             </ul>
             <button class="btn-top">TOP</button>
             <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
@@ -75,57 +81,42 @@
         <span class="bar"></span>
       </button>
     </header>
-    <section class="form-box">
-      <div class="box-head">
-        <h2><strong>간편하게 회원가입 후</strong>해와달의 모든 서비스를 이용하세요.</h2>
+    <main class="container">
+      <header class="visual">
+        <div class="visual-inner">
+          <h2>마이페이지</h2>
+          <p>회원정보 변경 및 신청내역 수정이 가능합니다.</p>
+        </div>
+      </header>
+      <div class="contents-wrap">
+        <h3>신청내역 확인</h3>
+        <div class="empty-list">
+          <img src="/images/common/icon-warning.png" alt="">
+          <p><strong>등록된 신청내역이 없습니다.</strong></p>
+          <p>모바일 부고 서비스를 신청 이용해보세요.</p>
+        </div>
+        <div class="con-btm">
+          <a href="" class="btn btn-major btn-lg">신청하기</a>
+        </div>
       </div>
-      <div class="box-body">
-        <form action="">
-          <fieldset>
-            <legend class="blind">가입정보</legend>
-            <div class="form-row">
-              <div class="input-wrap">
-                <label for="u-id" class="blind">해와달 아이디 (이메일주소)</label>
-                <input id="u-id" type="email" placeholder="해와달 아이디 (이메일주소)" />
-              </div>
-              <button class="btn" type="button">중복확인</button>
-            </div>
-            <div class="form-row  col-half">
-              <div class="input-wrap">
-                <label for="u-name" class="blind">이름</label>
-                <input id="u-name" type="text" placeholder="이름" />
-              </div>
-              <div class="input-wrap">
-                <label for="u-phone" class="blind">핸드폰번호 (숫자만입력)</label>
-                <input id="u-phone" type="text" placeholder="핸드폰번호 (숫자만입력)" />
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="input-wrap">
-                <label for="u-pw" class="blind">비밀번호</label>
-                <input id="u-pw" type="password" placeholder="비밀번호">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="input-wrap">
-                <label for="u-pw-check" class="blind">비밀번호 확인</label>
-                <input id="u-pw-check" type="password" placeholder="비밀번호 확인">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="input-wrap input-chk">
-                <input type="checkbox" id="agree" />
-                <label for="agree" onclick="javascript:popupLoad('terms');"> 이용약관 및 개인정보처리방침 동의</label>
-              </div>
-            </div>
-          </fieldset>
-        </form>
-      </div>
-      <div class="box-foot">
-        <button class="btn btn-major">회원가입 완료</button>
-      </div>
-    </section>
+    </main>
+    <footer class="footer">
+      <ul class="list-info">
+        <li><a href="">고객문의</a></li>
+        <li><a href="javascript:popupLoad('terms');">이용약관</a></li>
+        <li><a href="javascript:popupLoad('terms');">개인정보처리방침</a></li>
+      </ul>
+      <button class="btn-top">TOP</button>
+      <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
+      <address class="address-info">
+        <span>㈜에이튜드</span>
+        <span>대표 임재범</span>
+        <span>사업자등록번호 731-86-00258</span>
+        <span>고객센터 02-586-2589</span>
+        <span>서울시 서초구 사임당로 17길 99, 하이센스빌딩 4층</span>
+      </address>
+      <small class="txt-copyright">COPYRIGHT(C) 2020 SUN AND MOON. ALL RIGHTS RESERVED</small>
+    </footer>
   </div>
 </body>
-
 </html>
