--- a/MyPage/question_view.html
+++ b/MyPage/question_view.html
@@ -20,19 +20,23 @@
   <meta name="twitter:image" content="">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/fonts.css">
-  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/fonts.css">
+  <link rel="stylesheet" href="/css/layout.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="./js/layout.js"></script>
+  <script src="/js/layout.js"></script>
+
+  <script src="/js/slick.js"></script>
+  <link rel="stylesheet" href="/css/slick.css">
+  <link rel="stylesheet" href="/css/sub.css">
 </head>
 
 <body>
-  <div class="wrap">
+  <div class="wrap sub-wrap">
     <header class="header">
       <nav class="hd-navbar">
-        <h1 class="hd-logo"><a href="./index.html">해와달</a></h1>
+        <h1 class="hd-logo"><a href="/index.html">해와달</a></h1>
         <div class="hd-gnb">
           <ul class="hd-menu">
             <li><a href="">신청하기</a></li>
@@ -42,9 +46,9 @@
           <ul class="hd-util">
             <li class="hd-login">
               <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
-              <a href="./sub/user_login.html">로그인</a>
+              <a href="/Login/user_login.html">로그인</a>
             </li>
-            <li class="hd-signup"><a href="">회원가입</a></li>
+            <li class="hd-signup"><a href="/Login/user_register.html">회원가입</a></li>
             <!-- <li class="hd-login">
               <p class="mobile">홍길동님 반갑습니다!</p>
               <a href="">로그아웃</a>
@@ -53,11 +57,11 @@
           <div class="mobile footer">
             <ul class="list-info">
               <li><a href="">고객문의</a></li>
-              <li><a href="">이용약관</a></li>
-              <li><a href="">개인정보처리방침</a></li>
+              <li><a href="javascript:popupLoad('terms');">이용약관</a></li>
+              <li><a href="javascript:popupLoad('terms');">개인정보처리방침</a></li>
             </ul>
             <button class="btn-top">TOP</button>
-            <p class="ft-logo"><img src="./images/common/ft-logo.png" alt="해와달 로고" /></p>
+            <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
             <address class="address-info">
               <span>㈜에이튜드</span>
               <span>대표 임재범</span>
@@ -73,15 +77,50 @@
         <span class="bar"></span>
       </button>
     </header>
-
+    <main class="container">
+      <header class="visual">
+        <div class="visual-inner">
+          <h2>마이페이지</h2>
+          <p>회원정보 변경 및 신청내역 수정이 가능합니다.</p>
+        </div>
+      </header>
+      <div class="contents-wrap">
+        <h3>문의 내역</h3>
+        <div class="grid-box-wrap">
+          <div class="grid-box full ">
+            <div class="question-box">
+              <h4 class="title">제목이 들어갑니다. 제목이 들어갑니다. 제목이 들어갑니다. 제목이 들어갑니다. </h4>
+              <div class="txt">
+                문의드릴게 있습니다. 문의 내용입니다. 문의드릴게 있습니다. 문의 내용입니다.문의드릴게 있습니다. 문의 내용입니다.문의드릴게 있습니다. 문의 내용입니다.
+                문의드릴게 있습니다. 문의 내용입니다.문의드릴게 있습니다. 문의 내용입니다.문의드릴게 있습니다. 문의 내용입니다.문의드릴게 있습니다. 문의 내용입니다.
+                문의드릴게 있습니다. 문의 내용입니다.문의드릴게 있습니다. 문의 내용입니다.문의드릴게 있습니다. 문의 내용입니다.
+              </div>
+              <a href="" class="file">test.jpg</a>
+            </div>
+            <div class="answer-box">
+              <div class="txt">
+                답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 
+                답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 
+                답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 
+                답변을 완료했습니다. 답변 내용입니다. 답변을 완료했습니다. 답변 내용입니다. 
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="con-btm">
+          <a href="" class="btn btn-major btn-lg">목록</a>
+          <a href="" class="btn btn-lg">취소</a>
+        </div>
+      </div>
+    </main>
     <footer class="footer">
       <ul class="list-info">
         <li><a href="">고객문의</a></li>
-        <li><a href="">이용약관</a></li>
-        <li><a href="">개인정보처리방침</a></li>
+        <li><a href="javascript:popupLoad('terms');">이용약관</a></li>
+        <li><a href="javascript:popupLoad('terms');">개인정보처리방침</a></li>
       </ul>
       <button class="btn-top">TOP</button>
-      <p class="ft-logo"><img src="./images/common/ft-logo.png" alt="해와달 로고" /></p>
+      <p class="ft-logo"><img src="/images/common/ft-logo.png" alt="해와달 로고" /></p>
       <address class="address-info">
         <span>㈜에이튜드</span>
         <span>대표 임재범</span>
