--- a/MyPage/update.html
+++ b/MyPage/update.html
@@ -127,6 +127,7 @@
           <div class="contents">
             <p class="txt-wraning">※비밀번호 변경 시 새 비밀번호를 입력해주세요.</p>
             <table class="form-table">
+              <caption>비밀번호 입력</caption>
               <tr>
                 <th scope="row">
                   <label for="pwPass">비밀번호</label>
