탭전환 함수 적용

--- a/Apply/apply.html
+++ b/Apply/apply.html
@@ -28,6 +28,7 @@
   <script src="/js/layout.js"></script>
 
   <script src="/js/slick.js"></script>
+  <script src="/js/apply.js"></script>
   <link rel="stylesheet" href="/css/slick.css">
   <link rel="stylesheet" href="/css/sub.css">
   <link rel="stylesheet" href="/css/apply.css">
