--- a/Apply/apply_done.html
+++ b/Apply/apply_done.html
@@ -111,7 +111,7 @@
           </div>
         </header>
         <div class="contents-wrap">
-          <h3 class="title_underbar">결제완료</h3>
+          <h3 class="title-underbar">결제완료</h3>
           <div class="contents app_comp">
             <h4>해와달 모바일 부고 서비스 신청이 완료되었습니다.</h4>
             <p>
