--- a/Login/user_find.html
+++ b/Login/user_find.html
@@ -99,7 +99,7 @@
             </fieldset>
           </form>
           <div class="result">
-            <p>회원님의 아이디(이메일)는 <br /><em>test2312@atude.co.kr</em>입니다.</p>
+            <!-- <p>회원님의 아이디(이메일)는 <br /><em>test2312@atude.co.kr</em>입니다.</p> -->
           </div>
         </div>
         <div class="box-foot">
@@ -137,7 +137,7 @@
             </fieldset>
           </form>
           <div class="result">
-            <p>회원님의 이메일로<br /><em>임시비밀번호</em>가 전송되었습니다.</p>
+            <!-- <p>회원님의 이메일로<br /><em>임시비밀번호</em>가 전송되었습니다.</p> -->
           </div>
         </div>
         <div class="box-foot">
