--- a/Apply/apply.html
+++ b/Apply/apply.html
@@ -27,11 +27,8 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/js/layout.js"></script>
 
-  <script src="/js/slick.js"></script>
   <script src="/js/apply.js"></script>
-  <link rel="stylesheet" href="/css/slick.css">
   <link rel="stylesheet" href="/css/sub.css">
-  <link rel="stylesheet" href="/css/apply.css">
 </head>
 
 <body>
@@ -192,30 +189,30 @@
                   결제금액
                 </th>
                 <td>
-                  <p class="price"><strong>4,900</strong>원<span>(VAT포함)</span></p>
+                  <p class="price"><strong>4,900</strong>원 <span>(VAT포함)</span></p>
                 </td>
               </tr>
               <tr>
                 <th scope="row">
-                  <label for="pwPass1">결제방법</label>
+                  결제방법
                 </th>
                 <td>
-                  <div class="input-rdo normal">
+                  <div class="input-rdo">
                     <input type="radio" name="payment" id="pay_cred" checked />
                     <label for="pay_cred">신용카드</label>
                   </div>
-                  <div class="input-rdo normal">
+                  <div class="input-rdo">
                     <input type="radio" name="payment" id="pay_acc" />
                     <label for="pay_acc">실시간계좌이체</label>
                   </div>
                 </td>
               </tr>
             </table>
-            <p class="info">※결제가 완료되는 시점부터 사용기간이 적용됩니다.</p>
+            <p class="txt-info">※결제가 완료되는 시점부터 사용기간이 적용됩니다.</p>
           </div>
         </form>
         <div class="con-btm">
-          <a href="" class="btn btn-major btn-lg">수정완료</a>
+          <a href="" class="btn btn-major btn-lg">결제하기</a>
           <a href="" class="btn btn-lg">취소</a>
         </div>
       </div>
