--- a/Apply/apply_done.html
+++ b/Apply/apply_done.html
@@ -94,32 +94,30 @@
           </div>
         </header>
         <div class="contents-wrap">
-          <h3 class="title-underbar">결제완료</h3>
-          <div class="contents app_comp">
+          <h3>결제완료</h3>
+          <div class="contents top-line app_comp">
             <h4>해와달 모바일 부고 서비스 신청이 완료되었습니다.</h4>
             <p>
-              신청하신 모바일 부고 서비스는
-              <span>정보입력 후 바로 사용 가능</span>합니다.<br />정보입력은
-              <strong>마이페이지</strong>에서도 입력 가능합니다.
+              신청하신 모바일 부고 서비스는 <span>정보입력 후 바로 사용 가능</span>합니다.
+              <br />정보입력은 <strong>마이페이지</strong>에서도 입력 가능합니다.
             </p>
-            <ul>
-              <li>
-                <span class="title">신청상품</span>
-                Basic
-              </li>
-              <li>
-                <span class="title">URL</span>
-                <a href="https://sunatmoon.co.kr/abcd1234" target="_blank"
-                  >sunatmoon.co.kr/abcd1234</a
-                >
-              </li>
-            </ul>
-            <p class="info type2">
+            <div class="info-box">
+              <ul>
+                <li>
+                  <span class="title">신청상품</span>
+                  Basic
+                </li>
+                <li>
+                  <span class="title">URL</span>
+                  <a href="https://sunatmoon.co.kr/abcd1234" target="_blank">sunatmoon.co.kr/abcd1234</a>
+                </li>
+              </ul>
+            </div>
+            <p class="txt-info center">
               자세한 문의사항은 홈페이지 내 고객센터 > 1:1문의 및
               고객센터(02-586-2589)로 연락 바랍니다.<br />감사합니다.
             </p>
           </div>
-
           <div class="con-btm">
             <a href="" class="btn btn-major btn-lg">정보입력</a>
             <a href="" class="btn btn-lg">확인</a>
