--- a/Apply/apply_sample.html
+++ b/Apply/apply_sample.html
@@ -90,17 +90,17 @@
           <ul class="obituary">
             <li>
               <h4>Basic</h4>
-              <img src="/images/sub/apply_sample-item1-1.png" alt="">
+              <img src="/images/sub/apply_sample-item1-1.png" alt="" />
               <button type="button" class="btn" onclick="javascript:popupLoad('prev_obituary', 0)">샘플보기</button>
             </li>
             <li>
               <h4>Black</h4>
-              <img src="/images/sub/apply_sample-item1-2.png" alt="">
+              <img src="/images/sub/apply_sample-item1-2.png" alt=" /">
               <button type="button" class="btn" onclick="javascript:popupLoad('prev_obituary', 1)">샘플보기</button>
             </li>
             <li>
               <h4>White</h4>
-              <img src="/images/sub/apply_sample-item1-3.png" alt="">
+              <img src="/images/sub/apply_sample-item1-3.png" alt="" />
               <button type="button" class="btn" onclick="javascript:popupLoad('prev_obituary', 2)">샘플보기</button>
             </li>
           </ul>
@@ -110,12 +110,12 @@
           <ul class="theme">
             <li>
               <h4>Black</h4>
-              <img src="/images/sub/apply_sample-item2-1.png" alt="">
+              <img src="/images/sub/apply_sample-item2-1.png" alt="" />
               <button type="button" class="btn" onclick="javascript:popupLoad('prev_theme', 0)">샘플보기</button>
             </li>
             <li>
               <h4>White</h4>
-              <img src="/images/sub/apply_sample-item2-2.png" alt="">
+              <img src="/images/sub/apply_sample-item2-2.png" alt="" />
               <button type="button" class="btn" onclick="javascript:popupLoad('prev_theme', 1)">샘플보기</button>
             </li>
           </ul>
