--- a/MyPage/list_empty.html
+++ b/MyPage/list_empty.html
@@ -91,7 +91,7 @@
       <div class="contents-wrap">
         <h3>신청내역 확인</h3>
         <div class="empty-list">
-          <img src="/images/common/icon-warning.png" alt="">
+          <img src="/images/common/icon-warning.png" alt="" />
           <p><strong>등록된 신청내역이 없습니다.</strong></p>
           <p>모바일 부고 서비스를 신청 이용해보세요.</p>
         </div>
