--- a/MyPage/update.html
+++ b/MyPage/update.html
@@ -118,8 +118,8 @@
                     <option value="010">017</option>
                     <option value="010">019</option>
                   </select>
-                  <input type="text" id="UserPhone2" maxlength="4" value="8888" class="col-sm-4" />
-                  <input type="text" id="UserPhone3" maxlength="4" value="8888" class="col-sm-4" />
+                  <input type="text" id="UserPhone2" maxlength="4" value="8888" class="col-sm-4" title="중간 4자리" />
+                  <input type="text" id="UserPhone3" maxlength="4" value="8888" class="col-sm-4" title="마지막 4자리" />
                 </td>
               </tr>
             </table>
@@ -134,7 +134,7 @@
                 </th>
                 <td>
                   <input type="password" maxlength="20" id="pwPass" class="col-8" />
-                  <span>(영문+숫자 8~20자)</span>
+                  <span class="txt-info">(영문+숫자 8~20자)</span>
                 </td>
               </tr>
               <tr>
