--- a/MyPage/question_write.html
+++ b/MyPage/question_write.html
@@ -101,6 +101,7 @@
                 <label for="ifile_PC" class="btn-attach">파일첨부</label>
                 <input type="file" id="ifile_PC" value="파일첨부" />
                 <span class="file-name"></span>
+                <button type="button" class="file-del">삭제</button>
                 <p>※jpg, gif, png 파일만 첨부 가능합니다.</p>
               </div>
             </form>
