--- a/index.html
+++ b/index.html
@@ -170,25 +170,25 @@
             <div class="slide-cut  slick-current-on">
               <div class="slide-box">
                 <img src="/images/main/screen-guide-1.png" alt="" />
-                <p>모바일로 부고를 알리고 <br>상세 장례 정보를 제공합니다.</p>
+                <p>모바일로 부고를 알리고 <br />상세 장례 정보를 제공합니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
                 <img src="/images/main/screen-guide-2.png" alt="" />
-                <p>모바일 장례식 메인 메뉴가 표시되며, <br>고인명, 입관, 발인일실, 상주정보를 보실 수 있습니다.</p>
+                <p>모바일 장례식 메인 메뉴가 표시되며, <br />고인명, 입관, 발인일실, 상주정보를 보실 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
                 <img src="/images/main/screen-guide-3.png" alt="" />
-                <p>추모앨범을 직접 등록하고 <br>관리할 수 있습니다.</p>
+                <p>추모앨범을 직접 등록하고 <br />관리할 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
                 <img src="/images/main/screen-guide-4.png" alt="" />
-                <p>신청 시 등록한 장례정보가 <br>상세하게 보여지며 등록된 전화번호로 <br>바로 전화연결이 가능합니다.</p>
+                <p>신청 시 등록한 장례정보가 <br />상세하게 보여지며 등록된 전화번호로 <br />바로 전화연결이 가능합니다.</p>
               </div>
             </div>
             <div class="slide-cut">
@@ -212,13 +212,13 @@
             <div class="slide-cut">
               <div class="slide-box">
                 <img src="/images/main/screen-guide-8.png" alt="" />
-                <p>장례식장 정보를 <br>지도로 확인하실 수 있습니다.</p>
+                <p>장례식장 정보를 <br />지도로 확인하실 수 있습니다.</p>
               </div>
             </div>
             <div class="slide-cut">
               <div class="slide-box">
                 <img src="/images/main/screen-guide-8.png" alt="" />
-                <p>고객님께서 작성하신 정보로 <br>조의금을 보내실 수 있습니다.</p>
+                <p>고객님께서 작성하신 정보로 <br />조의금을 보내실 수 있습니다.</p>
               </div>
             </div>
           </div>
