--- a/index.html
+++ b/index.html
@@ -40,20 +40,24 @@
         <h1 class="hd-logo"><a href="/index.html">해와달</a></h1>
         <div class="hd-gnb">
           <ul class="hd-menu">
-            <li><a href="">신청하기</a></li>
-            <li><a href="">고객센터</a></li>
-            <li><a href="">마이페이지</a></li>
+            <li><a href="/Apply/apply.html">신청하기</a></li>
+            <li><a href="/CSCcenter/csc.html">고객센터</a></li>
+            <li><a href="/MyPage/mypage.html">마이페이지</a></li>
           </ul>
           <ul class="hd-util">
+            <!-- login 전 -->
             <li class="hd-login">
               <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
               <a href="/Login/user_login.html">로그인</a>
             </li>
             <li class="hd-signup"><a href="/Login/user_register.html">회원가입</a></li>
+            <!-- //login 전 -->
+            <!-- login 후 -->
             <!-- <li class="hd-login">
               <p class="mobile">홍길동님 반갑습니다!</p>
               <a href="">로그아웃</a>
             </li> -->
+            <!-- //login 후 -->
           </ul>
           <div class="mobile footer">
             <ul class="list-info">
