--- a/Login/user_login.html
+++ b/Login/user_login.html
@@ -12,7 +12,7 @@
   <meta name="description" content="모바일 장례서비스 해와달,쉽고 빠르게 부고장 전달,이제는 조문도 모바일 시대,모바일 장례식장,해와달">
   <meta property="og:title" content="모바일장례식 해와달">
   <meta property="og:image" content="">
-  <meta property="og:url" content="https://sunatmoon.co.kr/" />
+  <meta property="og:url" content="https://sunatmoon.com/" />
   <meta property="og:site_name" content="모바일장례식 해와달" />
   <meta property="og:type" content="website" />
   <meta name="twitter:title" content="모바일 장례식장 해와달">
@@ -23,8 +23,7 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/fonts.css">
   <link rel="stylesheet" href="/css/layout.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/js/layout.js"></script>
 
   <link rel="stylesheet" href="/css/sub.css">
@@ -37,20 +36,24 @@
         <h1 class="hd-logo"><a href="/index.html">해와달</a></h1>
         <div class="hd-gnb">
           <ul class="hd-menu">
-            <li><a href="">신청하기</a></li>
-            <li><a href="">고객센터</a></li>
-            <li><a href="">마이페이지</a></li>
+            <li><a href="/Apply/apply.html">신청하기</a></li>
+            <li><a href="/CSCcenter/csc.html">고객센터</a></li>
+            <li><a href="/MyPage/mypage.html">마이페이지</a></li>
           </ul>
           <ul class="hd-util">
+            <!-- login 전 -->
             <li class="hd-login">
               <p class="mobile">로그인 후 해와달 모든 서비스를 이용하세요!</p>
               <a href="/Login/user_login.html">로그인</a>
             </li>
             <li class="hd-signup"><a href="/Login/user_register.html">회원가입</a></li>
+            <!-- //login 전 -->
+            <!-- login 후 -->
             <!-- <li class="hd-login">
               <p class="mobile">홍길동님 반갑습니다!</p>
               <a href="">로그아웃</a>
             </li> -->
+            <!-- //login 후 -->
           </ul>
           <div class="mobile footer">
             <ul class="list-info">
