--- a/MyPage/list_empty.html
+++ b/MyPage/list_empty.html
@@ -12,7 +12,7 @@
   <meta name="description" content="모바일 장례서비스 해와달,쉽고 빠르게 부고장 전달,이제는 조문도 모바일 시대,모바일 장례식장,해와달">
   <meta property="og:title" content="모바일장례식 해와달">
   <meta property="og:image" content="">
-  <meta property="og:url" content="https://sunatmoon.co.kr/" />
+  <meta property="og:url" content="https://sunatmoon.com/" />
   <meta property="og:site_name" content="모바일장례식 해와달" />
   <meta property="og:type" content="website" />
   <meta name="twitter:title" content="모바일 장례식장 해와달">
@@ -23,8 +23,7 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/fonts.css">
   <link rel="stylesheet" href="/css/layout.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="/js/layout.js"></script>
 
   <script src="/js/slick.js"></script>
