--- a/MyPage/list_empty.html
+++ b/MyPage/list_empty.html
@@ -95,7 +95,7 @@
           <p>모바일 부고 서비스를 신청 이용해보세요.</p>
         </div>
         <div class="con-btm">
-          <a href="" class="btn btn-major btn-lg">신청하기</a>
+          <a href="" class="btn btn-regular btn-lg">확인</a><!-- 이전페이지로 -->
         </div>
       </div>
     </main>
