--- a/Login/user_register.html
+++ b/Login/user_register.html
@@ -113,6 +113,7 @@
               <div class="input-wrap">
                 <label for="u-pw-check" class="blind">비밀번호 확인</label>
                 <input id="u-pw-check" type="password" placeholder="비밀번호 확인">
+                <span class="txt-info">(영문+숫자 8~20자)</span>
               </div>
             </div>
             <div class="form-row">
