--- a/MyPage/update.html
+++ b/MyPage/update.html
@@ -114,15 +114,15 @@
                   <label for="UserPhone1">핸드폰번호</label>
                 </th>
                 <td>
-                  <select name="" id="UserPhone1" class="col-sm-4">
+                  <select name="" id="UserPhone1" class="col-md-4">
                     <option value="010" selected>010</option>
                     <option value="010">011</option>
                     <option value="010">016</option>
                     <option value="010">017</option>
                     <option value="010">019</option>
                   </select>
-                  <input type="text" id="UserPhone2" maxlength="4" value="8888" class="col-sm-4" title="중간 4자리" />
-                  <input type="text" id="UserPhone3" maxlength="4" value="8888" class="col-sm-4" title="마지막 4자리" />
+                  <input type="text" id="UserPhone2" maxlength="4" value="8888" class="col-md-4" title="중간 4자리" />
+                  <input type="text" id="UserPhone3" maxlength="4" value="8888" class="col-md-4" title="마지막 4자리" />
                 </td>
               </tr>
             </table>
