--- a/skin/main.html
+++ b/skin/main.html
@@ -49,7 +49,7 @@
       </nav>
     </header>
     <main class="contents-wrap">
-      <header class="contents-title">
+      <header class="info-head">
         <div class="inner">
           <h2 class="name">故 홍길동</h2>
           <div class="info">
