--- a/skin/gallery.html
+++ b/skin/gallery.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:400,500,700&display=swap&subset=korean">
   <link rel="stylesheet" href="/skin/css/skin.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
   <script src="/skin/js/skin.js"></script>
 </head>
 <body class="">
@@ -50,6 +51,7 @@
     </header>
     <main class="contents-wrap">
       <header class="info-head">
+        <div class="bg"></div>
         <div class="inner">
           <h2 class="name">故 홍길동</h2>
           <div class="info">
@@ -69,8 +71,25 @@
         </div>
       </header>
       <div class="contents">
+        <h2 class="con-title">추모앨범</h2>
+        <ul class="grid gallery">
+          <li class="grid-sizer"></li>
+          <li class="grid-item"><img src="/skin/images/gallery/gallery-default01.jpg" alt=""></li>
+          <li class="grid-item"><img src="/skin/images/gallery/gallery-default02.jpg" alt=""></li>
+          <li class="grid-item"><img src="/skin/images/gallery/gallery-default03.jpg" alt=""></li>
+          <li class="grid-item"><img src="/skin/images/gallery/gallery-default04.jpg" alt=""></li>
+        </ul>
       </div>
     </main>
   </div>
+  <script>
+    $('.grid').masonry({
+      // options
+      columnWidth: '.grid-sizer',
+      itemSelector: '.grid-item',
+      percentPosition: true,
+      gutter: 8
+    });
+  </script>
 </body>
 </html>
